Fix entries staying highlighted after context menu closes.

MouseArea.containsMouse is set to true on press but never unset when
the item accepts hover events. This is unfortunate but documented
behavior so it can't be changed in Qt 5. If there's a leave before
the press, that means containsMouse ends up true even with the mouse
outside the item. So we unset the state ourselves.

BUG:356018